--- a/src/Weather.css
+++ b/src/Weather.css
@@ -23,10 +23,59 @@
   margin: auto;
 }
 
+
 .Weather h1 {
-  color: green;
+  /* color: green; */
+  font-family: 'weather';
+  font-size: 60px;
+  margin: 10px;
 }
 
-.Weather p {
-  color: green;
+
+.Weather h2 {
+  /* color: rgb(128, 113, 0); */
+  font-family: 'weather';
+  font-size: 45px;
+}
+
+.Weather h3 {
+  /* color: rgb(128, 0, 85); */
+  font-family: 'weather';
+  font-size: 40px;
+}
+
+.Weather h4 {
+  /* color: rgb(8, 0, 165); */
+  font-family: 'weather';
+  font-size: 30px;
+  margin: 5px;
+}
+
+.Weather {
+  background-image: linear-gradient(to bottom right, rgb(196, 33, 68), yellow);
+  background-size: 1000% 400%;
+	animation: gradient 15s ease infinite;
+	font-weight: 400;
+  padding: 75px;
+  border-radius: 0.5em 0.5em 0.5em 0.5em;
+  box-shadow: 10px 10px 5px grey;
+  text-align: center;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.row {
+  padding: 10px;
+  margin: auto;
+  align-self: center;
 }
